tests/wpt/tests/third_party/test262/test/language/expressions/async-generator/early-errors-expression-await-as-function-binding-identifier.js
// Copyright 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
author: Caitlin Potter <caitp@igalia.com>
esid: sec-identifiers-static-semantics-early-errors
description: >
  `await` is not a valid BindingIdentifier for AsyncGeneratorExpressions.
negative:
  phase: parse
  type: SyntaxError
features: [async-iteration]
---*/

$DONOTEVALUATE();

(async function* await() { });
